@@ -353,6 +353,10 @@ dd { padding-bottom: 15px }
 					<option>y</option>
 					<option>z</option>
 				</optgroup>
+	            <optgroup>
+					<option>no label group - #1</option>
+					<option>no lable group - #2</option>
+				</optgroup>
 	        </select>
 	    </td>
       	<td>
@@ -387,6 +391,10 @@ dd { padding-bottom: 15px }
 					<option>x</option>
 					<option>y</option>
 					<option>z</option>
+				</optgroup>
+	            <optgroup>
+					<option>no label group - #1</option>
+					<option>no lable group - #2</option>
 				</optgroup>
 	        </select>
 	    </td>
